added a username field in register

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -31,7 +31,11 @@
   },
   "register": {
     "register": "Register New",
+    "username":"Username",
     "fullName": "Full Name",
+    "username-is":"Username is ",
+    "usernameMax":"Please provide your username with no more than 50 characters",
+    "usernameMin":"Please provide username",
     "fullName-is": "Full Name is ",
     "fullNameMin": "Please provide your full name",
     "fullNameMax": "Please provide your name with no more than 50 characters",
